libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-struct-type.jsonc
//@ run: fail
//@ description: fn/4 struct generics with type annotation should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#struct": { "T": "Int" },
    "#type": "Int"
    //~^ ERROR Remove this type annotation
  },
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
